[gd_scene load_steps=3 format=3 uid="uid://cm1k4e8y4inxx"]

[ext_resource type="Script" path="res://Scenes/UI/cell.gd" id="1_ej418"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0e3vd"]

[node name="Cell" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 73.0
offset_bottom = 90.0
mouse_filter = 1
script = ExtResource("1_ej418")

[node name="Button" type="Button" parent="."]
layout_mode = 1
offset_right = 73.0
offset_bottom = 90.0
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_0e3vd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0e3vd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_0e3vd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0e3vd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0e3vd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0e3vd")

[node name="CardShadow" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
